# obs-multilang-control

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.MD  pyproject.toml  requirements-win.txt
requirements/: base.txt  windows.txt
src/main/python/: app.py  main.py  models.py  settings.py  utils.py
src/main/python/models/: obs_configuration.py  obs_connection.py  obs_manager.py
src/main/python/views/: lang_switcher.enaml  main.enaml  obs_configuration.enaml  obs_connection.enaml
src/main/resources/base/: state.json
src/main/resources/base/profile-base/: basic.ini  service.json  streamEncoder.json
src/main/resources/mac/: scene-base.json
src/main/resources/windows/: scene-base.json
