[tool.poetry]
name = "obs-multilang-control"
version = "1.1.1"
description = ""
authors = ["Serhii Khalymon <sergiykhalimon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fbs = {git = "https://github.com/Infernion/fbs"}
obs-websocket-py = {git = "https://github.com/Infernion/obs-websocket-py"}
pyqt5 = "5.9.2"
macholib = "^1.11"
sip = "4.19.8"
enaml = "^0.10.4"

[tool.poetry.dev-dependencies]
bump2version = "^0.5.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
